fix alignment for right aligned variant

--- a/src/components/media.module.scss
+++ b/src/components/media.module.scss
@@ -65,7 +65,9 @@
   }
 
   .Image {
-    padding: 0 0 2rem 4%;
+    @media screen and (min-width: $mq-medium) {
+      padding: 0 0 2rem 4%;
+    }
   }
 }
 
